--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ app.baseURL = 'http://localhost:8080/'
 #--------------------------------------------------------------------
 
 database.default.hostname = 127.0.0.1
-database.default.database = login
+database.default.database = ci4_login
 database.default.username = root
 database.default.password = 
 database.default.DBDriver = MySQLi
